# filesoup-server

./: .gitignore  README.md  fs_config.cfg  requirements.txt  setup.cfg  tasks.todo
filesoup_server/: main.py
filesoup_server/files/: file_indexer.py  file_manager.py  file_manger.py  file_utils.py
filesoup_server/server/: app.py  server_utils.py
