[metadata]
name = filesoup-server
version = 0.0.0
description = A simple file server with python and flask.
long_description = file: README.md
long_description_content_type = text/markdown
author = Adwaith-Rajesh
author_email = adwaithrajesh3180@gmail.com
url = https://github.com/Adwaith-Rajesh/object-bucket
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    dill==0.3.3
    appdirs==1.4.4
python_requires = >= 3.6