[metadata]
name = filesoup-server
version = 0.0.0
description = A simple file server with python and flask.
long_description = file: README.md
long_description_content_type = text/markdown
author = Adwaith-Rajesh
author_email = adwaithrajesh3180@gmail.com
url = https://github.com/Adwaith-Rajesh/filesoup-server
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    aniso8601==8.1.1
    certifi==2020.12.5
    chardet==4.0.0
    click==7.1.2
    Flask==1.1.2
    Flask-RESTful==0.3.8
    idna==2.10
    itsdangerous==1.1.0
    Jinja2==2.11.3
    MarkupSafe==1.1.1
    pytz==2021.1
    requests==2.25.1
    six==1.15.0
    urllib3==1.26.3
    Werkzeug==1.0.1

python_requires = >= 3.6